--- a/templates/home.html
+++ b/templates/home.html
@@ -7,14 +7,14 @@
 {% endblock %}
 
 {% block heading %}
-  Projekt Tomo
+  Tomo
 {% endblock %}
 
 {% block header %}
 {% filter markdown %}
-  Projekt Tomo je stran, namenjena učenju programiranja.
+  Tomo je stran, namenjena učenju programiranja.
   Datoteke z ustreznimi nalogami prenesete na svoj računalnik, na katerem jih tudi rešujete.
-  Kadarkoli želite, lahko preverite pravilnost svojih rešitev, hkrati pa rešitve tudi shranite nazaj na Projekt Tomo.
+  Kadarkoli želite, lahko preverite pravilnost svojih rešitev, hkrati pa rešitve tudi shranite nazaj na strežnik.
 {% endfilter %}
 
   {% if request.user.is_staff %}
