--- a/templates/problem_set.html
+++ b/templates/problem_set.html
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block header %}
-    {{ problem_set.description|markdown }}
+    {{ problem_set.description|markdown:"mathjax" }}
 
     {% if user.is_authenticated %}
       <a href="{% url download_problem_set problem_set.id %}"><button class="btn primary">Prenesi naloge</button></a>&nbsp;
@@ -61,7 +61,7 @@
         {% include 'inline/problem.html' %}
         <div class='row'>
           <div class='span12 offset1'>
-            {{ problem.description|markdown }}
+            {{ problem.description|markdown:"mathjax" }}
           </div>
         </div>
         {% for part in problem.parts.all %}
