--- a/templates/inline/part.html
+++ b/templates/inline/part.html
@@ -25,13 +25,13 @@
     <p>Naloge še niste reševali.</p>
     {% endif %}
     <h4>Uradna rešitev</h4>
-    {% if problem_set.solution_visibility == 'vidne' %}
+    {% if problem_set.solution_visibility == 'vidne' or request.user.is_staff %}
       <pre><code>{{ part.solution }}</code></pre>
     {% endif %}
     {% if problem_set.solution_visibility == 'pogojno' and attempt.correct %}
       <pre><code>{{ part.solution }}</code></pre>
     {% endif %}
-    {% if problem_set.solution_visibility == 'pogojno' and not attempt.correct %}
+    {% if problem_set.solution_visibility == 'pogojno' and not attempt.correct and not request.user.is_staff %}
       <p>Uradno rešitev boste lahko videli šele takrat, ko boste nalogo pravilno rešili.</p>
     {% endif %}
     {% if problem_set.solution_visibility == 'skrite' %}
