--- a/templates/inline/part.html
+++ b/templates/inline/part.html
@@ -17,7 +17,7 @@
     <a href="#" class="close">&times;</a>
     <h3>Naloga {{ forloop.parentloop.counter }}.{{ forloop.counter }})</h3>
   </div>
-  <div class="modal-body">
+  <div class="modal-body solution-view">
     <h4>Vaša rešitev</h4>
     {% if attempt.solution %}
     <pre><code>{{ attempt.solution }}</code></pre>
