--- a/templates/base.html
+++ b/templates/base.html
@@ -124,7 +124,7 @@
           <a href="http://www.mathjax.org/">MathJax</a> in
           <a href="http://softwaremaniacs.org/soft/highlight/en/">highlight.js</a>
         <p>
-        <p>&copy; Matija Pretnar 2011</p>
+        <p>&copy; Andrej Bauer, Matija Pretnar 2011</p>
       </footer>
     </div> <!-- /container -->
 
