--- a/templates/problem_set.html
+++ b/templates/problem_set.html
@@ -75,13 +75,13 @@
     {% if request.user.is_staff %}
     <div class='row'>
       <div class='offset1'>
-      <h3>Nova naloga</h3>
+      <h3>Dodaj nalogo</h3>
 <form method="post" action="{% url create %}" class="form-stacked">
 {% csrf_token %}
         <fieldset>
           <input type="hidden" name="problem_set" value="{{ problem_set.id }}" />
           <div class="clearfix">
-            <label for="xlInput3">Naslov naloge</label>
+            <label for="xlInput3">Naslov</label>
             <div class="input">
               <input size="30" type="text" name="title" />
             </div>
