--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -83,7 +83,20 @@
       {% for part in parts %}
           {% with user_attempts|get_default:part as attempt %}
           <td>{% if attempt %}
-            <a href="#" rel="popover" title="Rešitev" data-content="<pre><code>{{ attempt.solution }}</code></pre>">
+            <div id="solutions-{{ problem.id }}-{{ part.id }}" class="modal hide fade" style="width: 700px; margin: -250px 0 0 -352px;">
+              <div class="modal-header">
+                <a href="#" class="close">&times;</a>
+                <h3>{{user.get_full_name}}, rešitev naloge {{ forloop.parentloop.counter }}.{{ forloop.counter }})</h3>
+              </div>
+              <div class="modal-body solution-view">
+                {% if attempt.solution %}
+                <pre><code>{{ attempt.solution }}</code></pre>
+                {% else %}
+                <p>Naloge še ni reševal.</p>
+                {% endif %}
+              </div>
+            </div>
+            <a data-controls-modal="solutions-{{ problem.id }}-{{ part.id }}" data-backdrop="true" data-keyboard="true" href="#">
               <span class="attempt-plusminus">{{ attempt.correct|yesno:"+,–"}}</span>
             </a>
             {% else %}
