Removed external dependence on http://yandex.st/highlightjs/6.1/styles/default.min.css

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 
     <!-- Le styles -->
     <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap.css">
-    <link rel="stylesheet" href="http://yandex.st/highlightjs/6.1/styles/default.min.css">
+    <link rel="stylesheet" href="/static/default.min.css">
     <link rel="stylesheet" href="{{ STATIC_URL}}tomo.css">
 
     <!-- Le javascript -->
