Removed external dependence on http://cdn.mathjax.org/mathjax/latest/MathJax.js

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
         }
       });
     </script>
-    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript" src="/static/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script src="{{ STATIC_URL }}jquery.js"></script>
     <script src="{{ STATIC_URL }}bootstrap-dropdown.js"></script>
     <script src="{{ STATIC_URL }}bootstrap-modal.js"></script>
