Removed the last dependency on external sites operated by Russian mafia. Also, when googlecode and mathjax get hacked, we will be thankful for running obsolete versions of their software. Not to mention I am going to Laze, where there is no internet...

--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
           })
       })
     </script>
-    <script type="text/javascript" src="http://yandex.st/highlightjs/6.0/highlight.min.js"></script>
+    <script type="text/javascript" src="/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 
     <!-- Le fav and touch icons -->
