--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
 {% endfilter %}
 
   {% if request.user.is_staff %}
-  <a href="{% url admin:course_course_add %}"><button class="btn">Dodaj predmet</button></a>
+  <a href="{% url admin:problem_course_add %}"><button class="btn">Dodaj predmet</button></a>
   {% endif %}
 {% endblock %}
 
