--- a/templates/inline/problem_set.html
+++ b/templates/inline/problem_set.html
@@ -48,31 +48,5 @@
 {% endblock %}
 
 {% block actions %}
-    {% if user.is_authenticated %}
-        <a href="{% url download_problem_set problem_set.id %}">Prenesi naloge</a>
-        {% if request.user.is_staff %}
-        <a href="">Uredi datoteke</a>
-        <a href="{% url admin:problem_problemset_change problem_set.id %}">Uredi sklop</a>
-        <a href="{% url admin:problem_problemset_delete problem_set.id %}">Pobriši sklop</a>
-        {% endif %}
-    {% else %}
-      <div id="modal-from-dom-{{ problem_set.id }}" class="modal hide fade">
-        <div class="modal-header">
-          <a href="#" class="close">&times;</a>
-          <h3>Za reševanje se najprej prijavite.</h3>
-        </div>
-        <div class="modal-body">
-          <p>
-            Če se ne morete prijaviti, lahko naloge rešujete z začasnimi datotekami.
-            V tem primeru se vaše rešitve <strong>ne bodo shranile na strežnik</strong>.
-            Ko se boste lahko spet prijavili, boste naloge morali ponovno prenesti ter vanje prepisati začasne rešitve.
-          </p>
-        </div>
-        <div class="modal-footer">
-          <a href="{% url download_problem_set problem_set.id %}" class="btn secondary">Prenesite začasne datoteke</a>
-        </div>
-      </div>
-
-      <a data-controls-modal="modal-from-dom-{{ problem_set.id }}" data-backdrop="true" data-keyboard="true" href="#">Prenesi naloge</a>
-    {% endif %}
+    {% include 'actions/problem_set.html' %}
 {% endblock %}
