--- a/templates/problem_set.html
+++ b/templates/problem_set.html
@@ -19,34 +19,7 @@
 {% block header %}
     {{ problem_set.description|markdown:"mathjax" }}
 
-    {% if user.is_authenticated %}
-      <a href="{% url download_problem_set problem_set.id %}"><button class="btn primary">Prenesi naloge</button></a>&nbsp;
-      {% if request.user.is_staff %}
-      <a href="{% url view_statistics problem_set.id %}"><button class="btn">Poglej statistiko</button></a>&nbsp;
-      <a href=""><button class="btn">Uredi datoteke</button></a>&nbsp;
-      <a href="{% url admin:problem_problemset_change problem_set.id %}"><button class="btn">Uredi sklop</button></a>&nbsp;
-      <a href="{% url admin:problem_problemset_delete problem_set.id %}"><button class="btn danger">Pobriši sklop</button></a>
-      {% endif %}
-    {% else %}
-      <div id="modal-from-dom" class="modal hide fade">
-        <div class="modal-header">
-          <a href="#" class="close">&times;</a>
-          <h3>Za reševanje se najprej prijavite.</h3>
-        </div>
-        <div class="modal-body">
-          <p>
-            Če se ne morete prijaviti, lahko naloge rešujete z začasnimi datotekami.
-            V tem primeru se vaše rešitve <strong>ne bodo shranile na strežnik</strong>.
-            Ko se boste lahko spet prijavili, boste naloge morali ponovno prenesti ter vanje prepisati začasne rešitve.
-          </p>
-        </div>
-        <div class="modal-footer">
-          <a href="{% url download_problem_set problem_set.id %}" class="btn secondary">Prenesite začasne datoteke</a>
-        </div>
-      </div>
-
-      <button data-controls-modal="modal-from-dom" data-backdrop="true" data-keyboard="true" class="btn primary">Prenesi naloge</button>
-    {% endif %}
+    {% include 'actions/problem_set.html' %}
 
     {% if not request.user.is_staff %}
     <span class='help-block'>
@@ -65,8 +38,8 @@
           </div>
         </div>
         {% for part in problem.parts.all %}
-          {% with attempts|get:part.id as attempt %}
             {% include 'inline/part.html' %}
+          {% with attempts|get:part.id as attempt %}
           {% endwith %}
         {% endfor %}
       <hr />
