Work partially done on templates

--- a/tomo/templates/inline/base.html
+++ b/tomo/templates/inline/base.html
@@ -1,11 +1,5 @@
 <div class='row inline {% block style %}{% endblock %}'>
-    <div class="span1">
-        <div class="stats {% block stats-class %}{% endblock %}">
-        <div class="stats-contents">
-        {% block stats %}{% endblock %}
-        </div>
-        </div>
-    </div>
+    <div class="span1">{% block stats %}{% endblock %}</div>
 
     <div class='span12'>
         <h3>{% block title %}{% endblock %}</h3>
