--- a/tomo/templates/problem_set.html
+++ b/tomo/templates/problem_set.html
@@ -29,7 +29,7 @@
 {% endblock %}
 
 {% block content %}
-    {% for problem in problems.all %}
+    {% for problem in problems %}
         {% include 'inline/problem.html' %}
         <div class='row'>
           <div class='span12 offset1'>
