--- a/tomo/templates/inline/problem.html
+++ b/tomo/templates/inline/problem.html
@@ -1,43 +1,35 @@
 {% extends "inline/base.html" %}
 {% load my_tags %}
 
-{% block stats-class %}{% spaceless %}
-    {% if request.user.is_authenticated %}
-    {% with count=solved|get:problem.id %}
-    {% if count == 100 %}success{% endif %}
-    {% if count < 100 and count >= 50 %}warning{% endif %}
-    {% if count < 50 %}error{% endif %}
+{% block stats %}
+    {% with stat=solved|get:problem.id %}
+    {% with percentage=stat.0 %}
+    {% with num=stat.1 %}
+        {% if percentage %}
+            <div class="stats {% spaceless %}
+                {% if count == 100 %}success{% endif %}
+                {% if count < 100 and count >= 50 %}warning{% endif %}
+                {% if count < 50 %}error{% endif %}
+                {% endspaceless %}">
+                <div class="stats-contents">
+                    {{ num }}
+                    <small>%</small>
+                </div>
+            </div>
+        {% else %}
+            <div class="stats">
+                <div class="stats-contents">
+                    {{ num }}
+                    <small>
+                        podnalog{% koncnica num "a" "i" "e" "" %}
+                    </small>
+                </div>
+            </div>
+        {% endif %}
     {% endwith %}
-    {% endif %}
-{% endspaceless %}{% endblock %}
-
-{% block stats %}{% spaceless %}
-    {% if request.user.is_authenticated %}
-        {{ solved|get:problem.id|default_if_none:0 }}
-        <small>%</small>
-    {% else %}
-        {% with count=parts_count|get:problem.id %}
-        {{ count }}
-        <small>
-        {% if count == 0 %}
-           podnalog
-        {% endif %}
-        {% if count == 1 %}
-           podnaloga
-        {% endif %}
-        {% if count == 2 %}
-           podnalogi
-        {% endif %}
-        {% if count == 3 or count == 4 %}
-           podnaloge
-        {% endif %}
-        {% if count >= 5 %}
-           podnalog
-        {% endif %}
-        </small>
-        {% endwith %}{% endif %}
-{% endspaceless %}{% endblock %}
-
+    {% endwith %}
+    {% endwith %}
+{% endblock %}
 
 {% block title %}
     <span id="problem-{{ problem.id }}">Naloga {{ forloop.counter }}{% if problem.title %} &mdash; {{ problem.title }}{% endif %}</span>
