--- a/tomo/templates/inline/problem_set.html
+++ b/tomo/templates/inline/problem_set.html
@@ -1,45 +1,37 @@
 {% extends "inline/base.html" %}
 {% load my_tags %}
 
-{% block style %}{% if not problem_set.visible %}hidn{% endif %}{% endblock %}
-
-{% block stats-class %}{% spaceless %}
-    {% if request.user.is_authenticated %}
-    {% with count=solved|get:problem_set.id %}
-    {% if count == 100 %}success{% endif %}
-    {% if count < 100 and count >= 50 %}warning{% endif %}
-    {% if count < 50 %}error{% endif %}
+{% block stats %}
+    {% with stat=solved|get:problem_set.id %}
+    {% with percentage=stat.0 %}
+    {% with num=stat.1 %}
+        {% if percentage %}
+            <div class="stats {% spaceless %}
+                {% if count == 100 %}success{% endif %}
+                {% if count < 100 and count >= 50 %}warning{% endif %}
+                {% if count < 50 %}error{% endif %}
+                {% endspaceless %}">
+                <div class="stats-contents">
+                    {{ num }}
+                    <small>%</small>
+                </div>
+            </div>
+        {% else %}
+            <div class="stats">
+                <div class="stats-contents">
+                    {{ num }}
+                    <small>
+                        nalog{% koncnica num "a" "i" "e" "" %}
+                    </small>
+                </div>
+            </div>
+        {% endif %}
     {% endwith %}
-    {% endif %}
-{% endspaceless %}{% endblock %}
+    {% endwith %}
+    {% endwith %}
+{% endblock %}
 
-{% block stats %}{% spaceless %}
-    {% if request.user.is_authenticated %}
-        {% with count=solved|get:problem_set.id|default_if_none:0 %}
-        {{ count }}<small>%</small>
-        {% endwith %}
-    {% else %}
-        {% with count=problem_set.problems.count %}
-        {{ count }}
-        <small>
-        {% if count == 0 %}
-           nalog
-        {% endif %}
-        {% if count == 1 %}
-           naloga
-        {% endif %}
-        {% if count == 2 %}
-           nalogi
-        {% endif %}
-        {% if count == 3 or count == 4 %}
-           naloge
-        {% endif %}
-        {% if count >= 5 %}
-           nalog
-        {% endif %}
-        </small>
-        {% endwith %}{% endif %}
-{% endspaceless %}{% endblock %}
+{% block style %}{% if not problem_set.visible %}hidn{% endif %}{% endblock %}
 
 {% block title %}
     <a href="{% url problem_set problem_set.id %}">
