--- a/tomo/templates/inline/problem.html
+++ b/tomo/templates/inline/problem.html
@@ -2,37 +2,38 @@
 {% load my_tags %}
 
 {% block stats %}
-    {% with stat=solved|get:problem.id %}
-    {% with percentage=stat.0 %}
-    {% with num=stat.1 %}
-        {% if percentage %}
-            <div class="stats {% spaceless %}
-                {% if count == 100 %}success{% endif %}
-                {% if count < 100 and count >= 50 %}warning{% endif %}
-                {% if count < 50 %}error{% endif %}
-                {% endspaceless %}">
-                <div class="stats-contents">
-                    {{ num }}
-                    <small>%</small>
-                </div>
-            </div>
-        {% else %}
-            <div class="stats">
-                <div class="stats-contents">
-                    {{ num }}
-                    <small>
-                        podnalog{% koncnica num "a" "i" "e" "" %}
-                    </small>
-                </div>
-            </div>
-        {% endif %}
+  {% if request.user.is_authenticated %}
+    {% with percentage=solved|get:problem.id %}
+    <div class="stats {% spaceless %}
+      {% if percentage == 100 %}success{% endif %}
+      {% if percentage < 100 and percentage >= 50 %}warning{% endif %}
+      {% if percentage < 50 %}error{% endif %}
+      {% endspaceless %}">
+      <div class="stats-contents">
+        {{ percentage }}
+        <small>%</small>
+      </div>
+    </div>
     {% endwith %}
+  {% else %}
+    {% with part_count=problem.parts.count %}
+    <div class="stats">
+      <div class="stats-contents">
+        {{ part_count }}
+         <small>
+          podnalog{% koncnica part_count "a" "i" "e" "" %}
+        </small>
+      </div>
+    </div>
     {% endwith %}
-    {% endwith %}
+  {% endif %}
 {% endblock %}
 
-{% block title %}
-    <span id="problem-{{ problem.id }}">Naloga {{ forloop.counter }}{% if problem.title %} &mdash; {{ problem.title }}{% endif %}</span>
+{% block header %}
+  <span id="problem-{{ problem.id }}">
+    Naloga {{ forloop.counter }}
+    {% if problem.title %} &mdash; {{ problem.title }}{% endif %}
+  </span>
 {% endblock %}
 
 {% block actions %}
@@ -40,15 +41,15 @@
 {% endblock %}
 
 {% block extras %}
-      <div class='row'>
-        <div class='span12 offset1'>
-          {{ problem.description|tex_markdown|safe }}
-        </div>
-      </div>
-      {% for part in problem.parts.all %}
-          {% include 'inline/part.html' %}
-        {% with attempts|get:part.id as attempt %}
-        {% endwith %}
-      {% endfor %}
-    <hr />
+    <div class='row'>
+    <div class='span12 offset1'>
+      {{ problem.description|tex_markdown|safe }}
+    </div>
+    </div>
+    {% for part in problem.parts.all %}
+      {% include 'inline/part.html' %}
+    {% with attempts|get:part.id as attempt %}
+    {% endwith %}
+    {% endfor %}
+  <hr />
 {% endblock %}
