--- a/tomo/templates/inline/part.html
+++ b/tomo/templates/inline/part.html
@@ -1,67 +1,47 @@
-{% extends 'inline/base.html' %}
 {% load my_tags %}
 
-{% block stats-class %}small {% if attempt.solution %}{% if attempt.correct %}success{% else %}error{% endif %}{% endif %}{% endblock %}
+<div class='row inline'>
+  <div class="span13">
 
-{% block stats %}{% if attempt.solution %}{% if attempt.correct %}+{% else %}–{% endif %}{% else %}?{% endif %}{% endblock %}
+    {% if not forloop.first or not forloop.last %}
+    <h4 class="part" style="background-image: url({{ STATIC_URL }}{% if attempt.solution %}{% if attempt.correct %}correct{% else %}incorrect{% endif %}{% else %}missing{% endif %}.png);">
+      Podnaloga {{ forloop.counter }}
+    </h4>
+    {% endif %}
 
-{% block contents %}
-{% filter tex_markdown %}
-{{ forloop.counter }}) {{ part.description|safe }}
-{% endfilter %}
+    {{ part.description|tex_markdown|safe }}
 
-<div id="solutions-{{ problem.id }}-{{ part.id }}" class="modal hide fade" style="width: 700px; margin: -250px 0 0 -352px;
-">
-  <div class="modal-header">
-    <a href="#" class="close">&times;</a>
-    <h3>Naloga {{ forloop.parentloop.counter }}.{{ forloop.counter }})</h3>
-  </div>
-  <div class="modal-body solution-view">
-    <h4>Vaša rešitev</h4>
-    {% if attempt.solution %}
-    <pre><code>{{ attempt.solution }}</code></pre>
-    {% else %}
-    <p>Naloge še niste reševali.</p>
-    {% endif %}
-    <h4>Uradna rešitev</h4>
-    {% if problem_set.solution_visibility == 'vidne' or request.user.is_staff %}
-      <pre><code>{{ part.solution }}</code></pre>
-    {% endif %}
-    {% if problem_set.solution_visibility == 'pogojno' and attempt.correct %}
-      <pre><code>{{ part.solution }}</code></pre>
-    {% endif %}
-    {% if problem_set.solution_visibility == 'pogojno' and not attempt.correct and not request.user.is_staff %}
-      <p>Uradno rešitev boste lahko videli šele takrat, ko boste nalogo pravilno rešili.</p>
-    {% endif %}
-    {% if problem_set.solution_visibility == 'skrite' %}
-      <p>Uradne rešitve so skrite.</p>
+
+    {% if request.user.is_authenticated or problem_set.solution_visibility == 'vidne' %}
+    <div class='my-actions'>
+      <a data-controls-modal="solutions-{{ problem.id }}-{{ part.id }}" data-backdrop="true" data-keyboard="true" href="#">
+        <button class='btn primary'>
+          {% if attempt.solution %}
+            {% if attempt.correct %}
+              {% if problem_set.solution_visibility == 'skrite' and not request.user.is_staff %}
+                Moja rešitev
+              {% else %}
+                Moja in uradna rešitev
+              {% endif %}
+            {% else %}
+              {% if problem_set.solution_visibility == 'vidne' or request.user.is_staff %}
+                Moj poskus in uradna rešitev
+              {% else %}
+                Moj poskus
+              {% endif %}
+            {% endif %}
+          {% else %}
+            {% if problem_set.solution_visibility == 'vidne' or request.user.is_staff %}
+            Uradna rešitev
+            {% endif %}
+          {% endif %}
+        </button></a>
+      {% if request.user.is_staff %}
+        <a href="{% url admin:tomo_part_delete part.id %}">
+          <button class="btn danger">Pobriši</button>
+        </a>
+      {% endif %}
+    </div>
     {% endif %}
   </div>
 </div>
-<div class='my-actions'>
-  <a data-controls-modal="solutions-{{ problem.id }}-{{ part.id }}" data-backdrop="true" data-keyboard="true" href="#"><button class='btn primary'>
-    {% if attempt.solution %}
-      {% if attempt.correct %}
-        {% if problem_set.solution_visibility == 'skrite' and not request.user.is_staff %}
-          Moja rešitev
-        {% else %}
-          Moja in uradna rešitev
-        {% endif %}
-      {% else %}
-        {% if problem_set.solution_visibility == 'vidne' or request.user.is_staff %}
-          Moj poskus in uradna rešitev
-        {% else %}
-          Moj poskus
-        {% endif %}
-      {% endif %}
-    {% else %}
-      {% if problem_set.solution_visibility == 'vidne' or request.user.is_staff %}
-      Uradna rešitev
-      {% endif %}
-    {% endif %}
-  </button></a>
-  {% if request.user.is_staff %}
-  <a href="{% url admin:tomo_part_delete part.id %}"><button class="btn danger">Pobriši</button></a>
-  {% endif %}
-</div>
-{% endblock %}
