--- a/tomo/static/tomo.css
+++ b/tomo/static/tomo.css
@@ -33,6 +33,11 @@ body {
   border: 0;
 }
 
+.my-actions {
+  margin-top: -8px;
+  margin-bottom: 12px;
+}
+
 .my-actions > a {
   margin-right: 10px;
 }
@@ -65,6 +70,18 @@ body {
 .inline {
   margin-bottom: 10px;
 
+}
+
+h4.part {
+  background-position: left center;
+  background-repeat: no-repeat;
+  padding-left: 24px; margin-left: -24px
+}
+h4 .correct {
+  background-image: url(001_06.png);
+}
+h4 .incorrect {
+  background-image: url({{ STATIC_URL }}001_05.png);
 }
 
 .stats {
