--- a/tomo/templates/inline/problem_set.html
+++ b/tomo/templates/inline/problem_set.html
@@ -1,44 +1,44 @@
-{% extends "inline/base.html" %}
 {% load my_tags %}
 
-{% block stats %}
-  {% if request.user.is_authenticated %}
-    {% with percentage=solved|get:problem_set.id %}
-    <div class="stats {% spaceless %}
-      {% if percentage == 100 %}success{% endif %}
-      {% if percentage < 100 and percentage >= 50 %}warning{% endif %}
-      {% if percentage < 50 %}error{% endif %}
-      {% endspaceless %}">
-      <div class="stats-contents">
-        {{ percentage }}
-        <small>%</small>
+<div class='row inline {% if not problem_set.visible %}hidn{% endif %}'>
+  <div class="span1">
+    {% if request.user.is_authenticated %}
+      {% with percentage=solved|get:problem_set.id %}
+      <div class="stats {% spaceless %}
+        {% if percentage == 100 %}success{% endif %}
+        {% if percentage < 100 and percentage >= 50 %}warning{% endif %}
+        {% if percentage < 50 %}error{% endif %}
+        {% endspaceless %}">
+        <div class="stats-contents">
+          {{ percentage }}
+          <small>%</small>
+        </div>
       </div>
-    </div>
-    {% endwith %}
-  {% else %}
-    {% with problem_count=problem_set.problems.count %}
-    <div class="stats">
-      <div class="stats-contents">
-        {{ problem_count }}
-        <small>
-          nalog{% koncnica problem_count "a" "i" "e" "" %}
-        </small>
+      {% endwith %}
+    {% else %}
+      {% with problem_count=problem_set.problems.count %}
+      <div class="stats">
+        <div class="stats-contents">
+          {{ problem_count }}
+          <small>
+            nalog{% koncnica problem_count "a" "i" "e" "" %}
+          </small>
+        </div>
       </div>
+      {% endwith %}
+    {% endif %}
+  </div>
+
+  <div class='span12'>
+
+    <h3>
+      <a href="{% url problem_set problem_set.id %}">
+        {{ problem_set.title }}
+      </a>
+    </h3>
+
+    <div class='my-actions'>
+      {% include 'actions/problem_set.html' %}
     </div>
-    {% endwith %}
-  {% endif %}
-{% endblock %}
-
-{% block style %}
-  {% if not problem_set.visible %}hidn{% endif %}
-{% endblock %}
-
-{% block header %}
-  <a href="{% url problem_set problem_set.id %}">
-    {{ problem_set.title }}
-  </a>
-{% endblock %}
-
-{% block actions %}
-  {% include 'actions/problem_set.html' %}
-{% endblock %}
+  </div>
+</div>
