--- a/tomo/templates/statistics.html
+++ b/tomo/templates/statistics.html
@@ -41,10 +41,12 @@
   <table>
     <thead>
       <tr>
-        <th>&nbsp;</th>
+        <th>Ime</th>
+        <th>Priimek</th>
         {% for part in problem.parts.all %}
         <th>{{ forloop.counter }})</th>
         {% endfor %}
+        <th>Čas oddaje</th>
       </tr>
     </thead>
 
@@ -52,12 +54,13 @@
       {% with attempts|get:problem.id as problem_attempts %}
       {% for user, attempts in problem_attempts.items %}
       <tr>
-        <td>{{ user.get_full_name }}</td>
+        <td>{{ user.first_name }}</td>
+        <td>{{ user.last_name }}</td>
         {% for part in problem.parts.all %}
         {% with attempts|get:part.id as attempt %}
           <td>
             {% if attempt %}
-              <div id="solutions-{{ problem.id }}-{{ part.id }}" class="modal hide fade" style="width: 700px; margin: -250px 0 0 -352px;">
+              <div id="solutions-{{ problem.id }}-{{ part.id }}-{{ user.id }}" class="modal hide fade" style="width: 700px; margin: -250px 0 0 -352px;">
                 <div class="modal-header">
                   <a href="#" class="close">&times;</a>
                   <h3>
@@ -74,7 +77,7 @@
                   {% endif %}
                 </div>
               </div>
-              <a data-controls-modal="solutions-{{ problem.id }}-{{ part.id }}" data-backdrop="true" data-keyboard="true" href="#">
+              <a data-controls-modal="solutions-{{ problem.id }}-{{ part.id }}-{{ user.id }}" data-backdrop="true" data-keyboard="true" href="#">
               <img src="{{ STATIC_URL }}{% if attempt.solution %}{% if attempt.correct %}correct{% else %}incorrect{% endif %}{% else %}missing{% endif %}.png">
               </a>
             {% else %}
