--- a/tomo/templates/actions/problem.html
+++ b/tomo/templates/actions/problem.html
@@ -1,9 +1,42 @@
 {% if user.is_authenticated %}
     {% if request.user.is_staff %}
+    <div id="copy-{{ problem.id }}" class="modal hide fade">
+      <div class="modal-header">
+        <a href="#" class="close">&times;</a>
+        <h3>Kopiranje naloge {{ problem.title }}</h3>
+      </div>
+      <div class="modal-body">
+        <form action="{% url copy %}" method="post">
+          <fieldset>
+            <div class="clearfix">
+              {% csrf_token %}
+              <input type="hidden" name="problem_id" value="{{ problem.id }}">
+              <label for="normalSelect">Ciljni sklop</label>
+              <div class="input">
+                <select name="problem_set_id" id="normalSelect">
+                {% for course in request.user.taught_courses.all %}
+                  <optgroup label="{{ course.name }}">
+                  {% for problem_set in course.problem_sets.all %}
+                    <option {% if problem_set == problem.problem_set %}selected{% endif %} value="{{ problem_set.id }}">{{ problem_set.title }}</option>
+                  {% endfor %}
+                  </optgroup>
+                {% endfor %}
+                </select>
+              </div>
+            </div><!-- /clearfix -->
+            <div class="modal-footer">
+              <input type="submit" class="btn primary" value="Kopiraj">
+            </div>
+          </fieldset>
+        </form>
+      </div>
+    </div>
+
     <a href="{% url teacher_download problem.id %}"><button class='btn primary'>Uredi</button></a>
     <a href="{% url student_download problem.id %}"><button class='btn'>Reši</button></a>
     {% if not forloop.first %}<a href="{% url move_problem_up problem.id %}"><button class='btn'>Gor</button></a>{% endif %}
     {% if not forloop.last %}<a href="{% url move_problem_down problem.id %}"><button class='btn'>Dol</button></a>{% endif %}
+   <a data-controls-modal="copy-{{ problem.id }}" data-backdrop="true" data-keyboard="true" href="#"><button class='btn'>Kopiraj</button></a>
     <a href="{% url admin:tomo_problem_delete problem.id %}"><button class='btn danger'>Pobriši</button></a>
     <a href="{% url admin:tomo_problem_change problem.id %}"><button class='btn'>Napredno…</button></a>
     {% else %}
@@ -23,9 +56,9 @@
       </p>
     </div>
     <div class="modal-footer">
-      <a href="{% url student_download problem.id %}" class="btn secondary"><button class='btn'>Prenesite začasno datoteko</button></a>
+      <a href="{% url student_download problem.id %}" class="btn secondary">Reši</a>
     </div>
   </div>
 
-  <a data-controls-modal="modal-from-dom-{{ problem.id }}" data-backdrop="true" data-keyboard="true" href="#"><button class='btn'>Prenesi nalogo</button></a>
+  <a data-controls-modal="modal-from-dom-{{ problem.id }}" data-backdrop="true" data-keyboard="true" href="#"><button class='btn'>Reši</button></a>
 {% endif %}
