Small UI change.

--- a/tomo/templates/actions/problem_set.html
+++ b/tomo/templates/actions/problem_set.html
@@ -24,7 +24,7 @@
       </p>
     </div>
     <div class="modal-footer">
-      <a href="{% url student_zip problem_set.id %}" class="btn secondary">Prenesite začasne datoteke</a>
+      <a href="{% url student_zip problem_set.id %}" class="btn secondary">Reši</a>
     </div>
   </div>
 
