Corrected header for solution in statistics.

--- a/tomo/templates/statistics.html
+++ b/tomo/templates/statistics.html
@@ -65,7 +65,7 @@
                 <div class="modal-header">
                   <a href="#" class="close">&times;</a>
                   <h3>
-                    {{user.get_full_name}}, rešitev naloge {{ forloop.parentloop.counter }}.{{ forloop.counter }})
+                    {{user.get_full_name}}, rešitev naloge {{ forloop.parentloop.parentloop.counter }}.{{ forloop.parentloop.counter }})
                   </h3>
                 </div>
                 <div class="modal-body solution-view">
