--- a/tomo/templates/inline/part.html
+++ b/tomo/templates/inline/part.html
@@ -18,25 +18,7 @@
     <h3>Naloga {{ forloop.parentloop.counter }}.{{ forloop.counter }})</h3>
   </div>
   <div class="modal-body solution-view">
-    <h4>Vaša rešitev</h4>
-    {% if attempt.solution %}
-    <pre><code>{{ attempt.solution }}</code></pre>
-    {% else %}
-    <p>Naloge še niste reševali.</p>
-    {% endif %}
-    <h4>Uradna rešitev</h4>
-    {% if problem_set.solution_visibility == 'vidne' or request.user.is_staff %}
-      <pre><code>{{ part.solution }}</code></pre>
-    {% endif %}
-    {% if problem_set.solution_visibility == 'pogojno' and attempt.correct %}
-      <pre><code>{{ part.solution }}</code></pre>
-    {% endif %}
-    {% if problem_set.solution_visibility == 'pogojno' and not attempt.correct and not request.user.is_staff %}
-      <p>Uradno rešitev boste lahko videli šele takrat, ko boste nalogo pravilno rešili.</p>
-    {% endif %}
-    {% if problem_set.solution_visibility == 'skrite' %}
-      <p>Uradne rešitve so skrite.</p>
-    {% endif %}
+    {% include 'inline/solution.html' %}
   </div>
 </div>
 
