--- a/tomo/static/tomo.css
+++ b/tomo/static/tomo.css
@@ -1,3 +1,11 @@
+      body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+      }
+      .sidebar-nav {
+        padding: 9px 0;
+      }
+
 /* Override some defaults */
 html, body {
   background-color: #eee;
@@ -5,10 +13,10 @@ html, body {
 body {
   padding-top: 40px; /* 40px to make the container go all the way to the bottom of the topbar */
 }
-.container > footer p {
+footer p {
   text-align: center; /* center align it with the container */
 }
-.container {
+.container-fluid {
   width: 820px; /* downsize our container to make the content feel a bit tighter and more cohesive. NOTE: this removes two full columns from the grid, meaning you only go to 14 columns and not 16. */
 }
 /* The white background content wrapper */
@@ -85,6 +93,7 @@ h4 .incorrect {
 }
 
 .stats {
+  float: right;
   padding: 0px;
   color: #404040;
   background-color: #f0f0f0;
