--- a/tomo/templates/base.html
+++ b/tomo/templates/base.html
@@ -8,13 +8,22 @@
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
-      <script src="{{ STATIC_URL}}html5.js"></script>
+      <script src="{{ STATIC_URL }}html5.js"></script>
     <![endif]-->
 
     <!-- Le styles -->
-    <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap.css">
-    <link rel="stylesheet" href="{{ STATIC_URL }}default.min.css">
-    <link rel="stylesheet" href="{{ STATIC_URL}}tomo.css">
+    <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}default.min.css" rel="stylesheet">
+    <link href="{{ STATIC_URL}}tomo.css" rel="stylesheet">
+    <!-- <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet"> -->
+
+    <!-- Le fav and touch icons -->
+    <!-- <link rel="shortcut icon" href="images/favicon.ico"> -->
+    <!-- <link rel="apple-touch-icon" href="images/apple-touch-icon.png"> -->
+    <!-- <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png"> -->
+    <!-- <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png"> -->
+  </head>
+
 
     <!-- Le javascript -->
     <script type="text/x-mathjax-config">
@@ -25,36 +34,13 @@
       });
     </script>
     <script type="text/javascript" src="{{ STATIC_URL }}MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <script src="{{ STATIC_URL }}jquery.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap-dropdown.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap-modal.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap-twipsy.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap-popover.js"></script>
-    <script type='text/javascript'>
-      $(document).ready(
-        function() {
-          $('pre code').each(
-            function() {
-              $(this).addClass('python');
-            }
-          );
-        }
-      );
-    </script>
-    <script>
-      $(function () {
-        $("a[rel=popover]")
-          .popover({
-            offset: 10,
-            placement: 'below',
-            html: true,
-          })
-          .click(function(e) {
-            e.preventDefault()
-          })
-      })
-    </script>
-    <script type="text/javascript" src="{{ STATIC_URL }}highlight.min.js"></script>
+    <script src="{{ STATIC_URL }}jquery.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}bootstrap-dropdown.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}bootstrap-modal.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}bootstrap-twipsy.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}bootstrap-popover.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}tomo.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}highlight.min.js" type="text/javascript"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 
     <!-- Le fav and touch icons -->
@@ -66,30 +52,37 @@
 
   <body>
 
-    <div class="topbar">
-      <div class="fill">
-        <div class="container">
+   <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container-fluid">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
           <a class="brand" href="{% url homepage %}">Tomo</a>
-          <ul class="nav secondary-nav">
-          {% if user.is_authenticated %}
-            <li class="dropdown" data-dropdown="dropdown">
-              <a href="#" class="dropdown-toggle">{{ user.get_full_name }}</a>
-              <ul class="dropdown-menu">
-                <li><a href="{% url settings %}">Nastavitve</a></li>
-                <li class="divider"></li>
-                <li><a href="{% url django.contrib.auth.views.logout %}">Odjavite se</a></li>
-              </ul>
-            </li>
-          {% else %}
-            <form method='post' action="{% url django.contrib.auth.views.login %}" class="pull-right">
-              {% csrf_token %}
-              <input class="input-small" id="id_username" name="username" type="text" placeholder="KovacM">
-              <input class="input-small" id="id_password" name="password" type="password" placeholder="Triglav.1">
-              <input type='hidden' name='next' value='{{ next|default:request.path }}' >
-              <button class="btn" type="submit">Prijavite se</button>
-            </form>
-          {% endif %}
-          </ul>
+          <div class="nav-collapse">
+            <ul class="nav pull-right">
+            {% if user.is_authenticated %}
+              <li class="dropdown" data-dropdown="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.get_full_name}} <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="{% url settings %}">Nastavitve</a></li>
+                  <li class="divider"></li>
+                  <li><a href="{% url django.contrib.auth.views.logout %}">Odjavite se</a></li>
+                </ul>
+              </li>
+            {% else %}
+              <form method='post' action="{% url django.contrib.auth.views.login %}" class="pull-right">
+                {% csrf_token %}
+                <input class="input-small" id="id_username" name="username" type="text" placeholder="KovacM">
+                <input class="input-small" id="id_password" name="password" type="password" placeholder="Triglav.1">
+                <input type='hidden' name='next' value='{{ next|default:request.path }}' >
+                <button class="btn" type="submit">Prijavite se</button>
+              </form>
+            {% endif %}
+            </ul>
+          </div><!--/.nav-collapse -->
         </div>
       </div>
     </div>
